fixed overflow for body

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: "Raleway", sans-serif;
   background-color: black;
   margin: 0;
+  overflow-x: hidden;
 }
 
 header {
